# doido

./: CLAUDE.md  Cargo.toml
docs/: 00-overview.md  01-router.md  02-controller.md  03-model.md  04-view.md  05-config.md  06-cli.md  06b-generators.md  07-middleware.md  08-mailer.md  09-jobs.md  10-cache.md  11-core.md  12-cable.md  13-kafka.md  14-mcp.md
docs/superpowers/plans/: 2026-04-15-doido-core.md  2026-04-16-doido-config.md  2026-04-16-doido-controller.md  2026-04-16-doido-router.md  2026-04-16-doido-view.md
doido-config/: Cargo.toml
doido-config/src/: crypto.rs  env_override.rs  lib.rs  loader.rs  types.rs
doido-config/tests/: config_test.rs
doido-controller/: Cargo.toml
doido-controller-macros/: Cargo.toml
doido-controller-macros/src/: controller.rs  lib.rs
doido-controller/src/: context.rs  lib.rs  response.rs
doido-controller/tests/: controller_test.rs
doido-core/: Cargo.toml
doido-core/src/: error.rs  lib.rs  trace.rs
doido-core/src/inflector/: inflections.rs  mod.rs  rules.rs
doido-core/tests/: error_test.rs  inflector_test.rs  trace_test.rs
doido-router/: Cargo.toml
doido-router-macros/: Cargo.toml
doido-router-macros/src/: codegen.rs  lib.rs  parser.rs
doido-router/src/: lib.rs
doido-router/tests/: router_test.rs
doido-view/: Cargo.toml
doido-view/src/: engine.rs  lib.rs  renderer.rs  response.rs  tera_engine.rs
doido-view/tests/: view_test.rs
