[package]
name = "doido-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
doido-core = { path = "../doido-core" }
doido-controller-macros = { path = "../doido-controller-macros" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
serde_urlencoded = "0.7"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
